[package]
name = "export-schoology"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-recursion = "1.1.1"
async-trait = "0.1.80"
env_logger = "0.11.3"
http = "1.1.0"
log = { version = "0.4.21", features = ["std"] }
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-middleware = "0.3.1"
reqwest-retry = "0.5.0"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["fs", "full"] }
uuid = { version = "1.8.0", features = ["v4"] }
